# command

./: .gitignore  README.md  main.cpp
src/: CMakeLists.txt  functions.cpp  main.cpp  second.txt
src/include/: functions.h
